[package]
name = "opendreamffi"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
name = "sdmm_opendream"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dreammaker = { path = "../dreammaker" }
serde_json = "1.0"
serde = "1.0"
